--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,8 @@ TODO LIST
 - Display info about trainer sets, Battle Tower sets on Pokémon page, to give reader an idea of possible movesets; maybe also some kind of "moveset builder"
 - Display wild Pokémon movesets on map pages, maybe highlight Field Effect-changing moves where relevant (e.g. Noivern/Tailwind in Chrysolia Spring Sauna)
 - Info about how to change between forms (already done for Mega Evolutions)
+- Have a way to identify forms as "battle only" (so we don't show e.g. that Mega-Lucario eggs hatch into Mega-Lucario)
+
+MAYBE:
+
+- Fix Pokémon with one regular ability / one Hidden Ability being displayed as if they have two regular abilities (though, seems like this is just how it is in the PBS files? I don't think the regular/hidden distinction actually has any relevance in Reborn anyway)
