add move pp / precise times for morning/day/night encounters

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,7 @@ TODO LIST
 - Display wild Pokémon movesets on map pages, maybe highlight Field Effect-changing moves where relevant (e.g. Noivern/Tailwind in Chrysolia Spring Sauna)
 - Info about how to change between forms (already done for Mega Evolutions)
 - Have a way to identify forms as "battle only" (so we don't show e.g. that Mega-Lucario eggs hatch into Mega-Lucario)
+- Make encounters page nicer (e.g. allow grouping by Pokémon, collapsing levels)
 
 MAYBE:
 
