shiny new marshal parser complete, used it to load tileset data

--- a/TODO.txt
+++ b/TODO.txt
@@ -13,3 +13,4 @@ TODO LIST
 MAYBE:
 
 - Fix Pokémon with one regular ability / one Hidden Ability being displayed as if they have two regular abilities (though, seems like this is just how it is in the PBS files? I don't think the regular/hidden distinction actually has any relevance in Reborn anyway)
+- Figure out how Hidden Power works for trainer Pokémon. Is it really just random?
