--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 TODO LIST
 
-- Fix marshal parser's issues with cyclic refs
 - Parse map events for item locations
 - Parse map events for trainer locations
 - Extract Battle Tower info (btpokemon.txt)
@@ -9,6 +8,7 @@ TODO LIST
 - Info about how to change between forms (already done for Mega Evolutions)
 - Have a way to identify forms as "battle only" (so we don't show e.g. that Mega-Lucario eggs hatch into Mega-Lucario)
 - Make encounters page nicer (e.g. allow grouping by Pokémon, collapsing levels)
+- Formulate and test a build process
 
 MAYBE:
 
