fix missing megahorn page bug

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,6 +9,10 @@ TODO LIST
 - Have a way to identify forms as "battle only" (so we don't show e.g. that Mega-Lucario eggs hatch into Mega-Lucario)
 - Make encounters page nicer (e.g. allow grouping by Pokémon, collapsing levels)
 - Formulate and test a build process
+- Missing event enccounters:
+    - Rayquaza, Riolu, probably more
+- FIgure out how autotiles work and use that to improve the map pictures
+- Add panoramas to map pictures
 
 MAYBE:
 
