a fix for egg moves. and a bunch of other stuff i forgot to commit earlier

--- a/TODO.txt
+++ b/TODO.txt
@@ -13,8 +13,11 @@ TODO LIST
     - Rayquaza, Riolu, probably more
 - FIgure out how autotiles work and use that to improve the map pictures
 - Add panoramas to map pictures
+- Make event encounters script map work again
+- Egg move parents
 
 MAYBE:
 
 - Fix Pokémon with one regular ability / one Hidden Ability being displayed as if they have two regular abilities (though, seems like this is just how it is in the PBS files? I don't think the regular/hidden distinction actually has any relevance in Reborn anyway)
+  - Yep, checked in-game, if you use an ability capsule on Raikou with Pressure you don't see the "(H)" after Inner Focus. So this is accurate, just an instance where Essentials/Reborn is slightly different (albeit not meaningfully different) from the official games
 - Figure out how Hidden Power works for trainer Pokémon. Is it really just random?
