--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 TODO LIST
 
+- Bag pocket names in items table should reflect the names given in Settings.rb (pbPocketNames)
+- Rename reborn/script.py to multiple_forms_script.py or something
+- Parse settings for rayquaza info, etc.
+
 - Parse map events for item locations
 - Parse map events for trainer locations
 - Extract Battle Tower info (btpokemon.txt)
