--- a/TODO.txt
+++ b/TODO.txt
@@ -17,7 +17,7 @@ TODO LIST
     - Rayquaza, Riolu, probably more
 - FIgure out how autotiles work and use that to improve the map pictures
 - Add panoramas to map pictures
-- Make event encounters script map work again
+- Make event encounters script work again
 - Egg move parents
 
 MAYBE:
