fix for broken trainer pages

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@ TODO LIST
 - Bag pocket names in items table should reflect the names given in Settings.rb (pbPocketNames)
 - Rename reborn/script.py to multiple_forms_script.py or something
 - Parse settings for rayquaza info, etc.
-
+- Make event encounter script able to parse more complex conditions (e.g. the egg gift in Rhodochrine Jungle)
 - Parse map events for item locations
 - Parse map events for trainer locations
 - Extract Battle Tower info (btpokemon.txt)
@@ -13,11 +13,8 @@ TODO LIST
 - Have a way to identify forms as "battle only" (so we don't show e.g. that Mega-Lucario eggs hatch into Mega-Lucario)
 - Make encounters page nicer (e.g. allow grouping by Pokémon, collapsing levels)
 - Formulate and test a build process
-- Missing event enccounters:
-    - Rayquaza, Riolu, probably more
 - FIgure out how autotiles work and use that to improve the map pictures
 - Add panoramas to map pictures
-- Make event encounters script work again
 - Egg move parents
 
 MAYBE:
