--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 TODO LIST
 
+- Add links to growth rates/egg moves lists on home page
 - Fix bug: why aren't simple trade evos (golem, conkeldurr, trevenant, etc.) showing up?
 - Bag pocket names in items table should reflect the names given in Settings.rb (pbPocketNames)
 - Rename reborn/script.py to multiple_forms_script.py or something
