pokemon appearances in trainer teams

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,9 @@
+BUGS
+- Ditto event IVs not included
+
 TODO LIST
 
 - Add links to growth rates/egg moves lists on home page
-- Fix bug: why aren't simple trade evos (golem, conkeldurr, trevenant, etc.) showing up?
 - Bag pocket names in items table should reflect the names given in Settings.rb (pbPocketNames)
 - Rename reborn/script.py to multiple_forms_script.py or something
 - Parse settings for rayquaza info, etc.
@@ -10,7 +12,7 @@ TODO LIST
 - Parse map events for trainer locations
 - Extract Battle Tower info (btpokemon.txt)
 - Display info about trainer sets, Battle Tower sets on Pokémon page, to give reader an idea of possible movesets; maybe also some kind of "moveset builder"
-- Display wild Pokémon movesets on map pages, maybe highlight Field Effect-changing moves where relevant (e.g. Noivern/Tailwind in Chrysolia Spring Sauna)
+- Display wild Pokémon movesets on map pages [done], maybe also highlight Field Effect-changing moves where relevant (e.g. Noivern/Tailwind in Chrysolia Spring Sauna)
 - Info about how to change between forms (already done for Mega Evolutions)
 - Have a way to identify forms as "battle only" (so we don't show e.g. that Mega-Lucario eggs hatch into Mega-Lucario)
 - Make encounters page nicer (e.g. allow grouping by Pokémon, collapsing levels)
