make trainer view look better

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,7 +11,7 @@ TODO LIST
 - Parse map events for item locations
 - Parse map events for trainer locations
 - Extract Battle Tower info (btpokemon.txt)
-- Display info about trainer sets, Battle Tower sets on Pokémon page, to give reader an idea of possible movesets; maybe also some kind of "moveset builder"
+- Display info about trainer sets, [done] Battle Tower sets on Pokémon page, to give reader an idea of possible movesets; maybe also some kind of "moveset builder"
 - Display wild Pokémon movesets on map pages [done], maybe also highlight Field Effect-changing moves where relevant (e.g. Noivern/Tailwind in Chrysolia Spring Sauna)
 - Info about how to change between forms (already done for Mega Evolutions)
 - Have a way to identify forms as "battle only" (so we don't show e.g. that Mega-Lucario eggs hatch into Mega-Lucario)
