--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@ BUGS
 
 TODO LIST
 
+- Find out what determines the order of trainers in the debug menu, since it seems to be different from the pbs_order
 - Add links to growth rates/egg moves lists on home page
 - Bag pocket names in items table should reflect the names given in Settings.rb (pbPocketNames)
 - Rename reborn/script.py to multiple_forms_script.py or something
