--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@ BUGS
 
 TODO LIST
 
+- Add event encounters that are just "pbAddPokemon(PBSpecies:: ..." (e.g. Coral Ward Lotad)
 - Find out what determines the order of trainers in the debug menu, since it seems to be different from the pbs_order
 - Add links to growth rates/egg moves lists on home page
 - Bag pocket names in items table should reflect the names given in Settings.rb (pbPocketNames)
