battle facility trainers pages, wip

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,10 @@ BUGS
 
 TODO LIST
 
-- Add event encounters that are just "pbAddPokemon(PBSpecies:: ..." (e.g. Coral Ward Lotad)
+- Clear up all the tons of dead code in this project
+- Put event commands in the database
+- We need a Ctrl+Fable extract of all event scripts (Event YEET script?)
+- Add info to event encounters about location on the map + required switches/variables/etc.
 - Find out what determines the order of trainers in the debug menu, since it seems to be different from the pbs_order
 - Add links to growth rates/egg moves lists on home page
 - Bag pocket names in items table should reflect the names given in Settings.rb (pbPocketNames)
@@ -32,3 +35,5 @@ MAYBE:
     i think it is already?
 - OK, I think the time has come to start identifying which parts of the DB/site we need to regenerate rather than just regenerating everything with every change
 - The whole evolution requirements stuff should be redone. Sometimes EAV is what you need
+- Shouldn't the Peridot Ward Joltik have Cross Poison as an egg move?
+  - Nope, wiki is wrong here, there is an entry for it in PokemonEncounterModifiers, using 32 as the WildMod value, but WildMod actually never gets set to 32, so it doesn't happen. also verified with my save file, i got joltik through the event and no cross poison. devs probably forgot to set the WildMOd?
