--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 TODO LIST (roughly sorted by priority)
 
+- Add a "tile" table, to store each individual tile (useful for linking with "event_page_tile")
+- Split out map image generating stuff from map_data.py
 - Make encounters page nicer (e.g. allow grouping by Pokémon, collapsing levels)
 - Parse map events for item locations
 - Parse map events for trainer locations
