--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 TODO LIST (roughly sorted by priority)
 
+- Random dialogue line generator
+- Music page so you can find out which maps/battles used a particular piece of music
 - Add a "tile" table, to store each individual tile (useful for linking with "event_page_tile")
 - Split out map image generating stuff from map_data.py
 - Make encounters page nicer (e.g. allow grouping by Pokémon, collapsing levels)
@@ -12,7 +14,6 @@ TODO LIST (roughly sorted by priority)
 - Parse settings for rayquaza info, etc.
 - Add panoramas to map pictures
 - FIgure out how autotiles work and use that to improve the map pictures
-- Put event commands in the database
 - Find out what determines the order of trainers in the debug menu, since it seems to be different from the pbs_order
 - Formulate and test a build process
 - Rename reborn/script.py to multiple_forms_script.py or something
